--- a/index.html
+++ b/index.html
@@ -16,6 +16,35 @@
     <h3>Experience</h3>
   </div>
   
-  <div></div>
+  <div>
+    <h4>SC Rental Assistance Program Supervisor</h4>
+    <h5>Nan McKay | 2022 - 2023</h5>
+    <h6>Responsible for overseeing day to day operations of 100+ employee service center. Review and coach team on customer interactions enforcing organization-wide standards. Measure, report and identify strategies to address key metrics. </h6>
+  </div>
+  
+  <div>
+    <h4>Research/ Remediation Analyst</h4>
+    <h5>Wells Fargo | 2019 - 2021</h5>
+    <h6>Transitioned multiple channels into a streamlined [Enterprise Complaints Management Office, the Customer Remediation Center of Excellence and Net Promoter System] to improve user experience through analyzing and resolving dozens of applications, customer accounts and reports.</h6>
+  </div>
+  
+  <div>
+    <h4>Equipment Title Manager</h4>
+    <h5>Wells Fargo | 2017 - 2019</h5>
+    <h6>Evaluated client accounts for state-specific title/lien entry/release. Prepared and managed reporting, acting as cross-departmental liaison. Led the index and export initiative of thousands of paper files into digital houses.  </h6>
+  </div>
+  
+  <div>
+    <h4>Customer Experience Lead</h4>
+    <h5>Delta Airlines | 2015 - 2017</h5>
+    <h6>Managed a team of top-performers using supportive action-based leadership. Partnered with multiple stages of the user lifecycle to improve experience. Performed quality assurance evaluations by assessing/monitoring team member/customer interactions. Facilitated trainings and created job aids to develop operating procedures. Resolved escalated/high value customer inquiries through outstanding customer support in a fast-paced environment  </h6>
+  </div>
+  
+  <div>
+    <h4>Customer Account Specialist</h4>
+    <h5>Park Nicollet Health Services | 2012 - 2015</h5>
+    <h6>Articulated billing and coding to inbound/outbound callers. Calculated price estimates to potential and existing patients. Enrolled uninsured patients into affordable healthcare coverage while resolving outstanding accounts for the Walk-In Billing Office. </h6>
+  </div>
+  
     </body>
 </html>
