--- a/index.html
+++ b/index.html
@@ -22,10 +22,18 @@
     <h6>Responsible for overseeing day to day operations of 100+ employee service center. Review and coach team on customer interactions enforcing organization-wide standards. Measure, report and identify strategies to address key metrics. </h6>
   </div>
   
+    <div class="experience-header">
+    <h></h>
+  </div>
+  
   <div>
     <h4>Research/ Remediation Analyst</h4>
     <h5>Wells Fargo | 2019 - 2021</h5>
     <h6>Transitioned multiple channels into a streamlined [Enterprise Complaints Management Office, the Customer Remediation Center of Excellence and Net Promoter System] to improve user experience through analyzing and resolving dozens of applications, customer accounts and reports.</h6>
+  </div>
+  
+   <div class="experience-header">
+    <h></h>
   </div>
   
   <div>
@@ -33,12 +41,21 @@
     <h5>Wells Fargo | 2017 - 2019</h5>
     <h6>Evaluated client accounts for state-specific title/lien entry/release. Prepared and managed reporting, acting as cross-departmental liaison. Led the index and export initiative of thousands of paper files into digital houses.  </h6>
   </div>
+ 
+   <div class="experience-header">
+    <h></h>
+  </div>
+  
   
   <div>
     <h4>Customer Experience Lead</h4>
     <h5>Delta Airlines | 2015 - 2017</h5>
     <h6>Managed a team of top-performers using supportive action-based leadership. Partnered with multiple stages of the user lifecycle to improve experience. Performed quality assurance evaluations by assessing/monitoring team member/customer interactions. Facilitated trainings and created job aids to develop operating procedures. Resolved escalated/high value customer inquiries through outstanding customer support in a fast-paced environment  </h6>
   </div>
+   <div class="experience-header">
+    <h></h>
+  </div>
+  
   
   <div>
     <h4>Customer Account Specialist</h4>
