--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
  <div>
-  <h1>Andrea Cannon</h1>
-  <p>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results for a diversity of organizations.</p>
+   <h1>Andrea Cannon</h1>
+   <img src="https://lh3.googleusercontent.com/a/AEdFTp7i_9TElUep12jBnEr4QvdDjPSCMUnlwGJnaqLsSA=s317-p-rw-no"/>
+  <p>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</p>
  </div>
   
   <div class="experience-header">
@@ -17,30 +18,40 @@
   </div>
   
   <div>
-    <h4>SC Rental Assistance Program Supervisor</h4>
-    <h5>Nan McKay | 2022 - 2023</h5>
-    <h6>Responsible for overseeing day to day operations of 100+ employee service center. Review and coach team on customer interactions enforcing organization-wide standards. Measure, report and identify strategies to address key metrics. </h6>
-  </div>
+    <h4>SC Rental Assistance Program Supervisor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nan McKay | 2022 - 2023</h4>
+    <ul>
+      <li>Responsible for overseeing day to day operations of 100+ employee service center</li>
+      <li>Review and coach team on customer interactions enforcing organization-wide standards</li>
+      <li>Measure, report and identify strategies to address key metrics</li>
+    </ul>
+      </div>
   
-    <div class="experience-header">
+ 
+   <div class="experience-header">
     <h></h>
   </div>
   
   <div>
-    <h4>Research/ Remediation Analyst</h4>
-    <h5>Wells Fargo | 2019 - 2021</h5>
-    <h6>Transitioned multiple channels into a streamlined [Enterprise Complaints Management Office, the Customer Remediation Center of Excellence and Net Promoter System] to improve user experience through analyzing and resolving dozens of applications, customer accounts and reports.</h6>
-  </div>
+    <h4>Research/ Remediation Analyst &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Wells Fargo | 2019 - 2021</h4>
+    <ul>
+    <li>Transitioned multiple channels into a streamlined [Enterprise Complaints Management Office</li>
+    <li>Implemented Net Promoter System] to improve user experience </li>
+     <li>Analyzed and resolved dozens of applications, customer accounts and reports.</li>
+    </ul>
+      </div>
   
    <div class="experience-header">
     <h></h>
   </div>
   
   <div>
-    <h4>Equipment Title Manager</h4>
-    <h5>Wells Fargo | 2017 - 2019</h5>
-    <h6>Evaluated client accounts for state-specific title/lien entry/release. Prepared and managed reporting, acting as cross-departmental liaison. Led the index and export initiative of thousands of paper files into digital houses.  </h6>
-  </div>
+    <h4>Equipment Title Manager &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Wells Fargo | 2017 - 2019</h4>
+    <ul>
+      <li>Evaluated client accounts for state-specific title/lien entry/release</li>
+      <li>Prepared and managed reporting, acting as cross-departmental liaison</li>
+      <li>Led the index and export initiative of thousands of paper files into digital houses</li>
+    </ul>
+      </div>
  
    <div class="experience-header">
     <h></h>
@@ -48,20 +59,28 @@
   
   
   <div>
-    <h4>Customer Experience Lead</h4>
-    <h5>Delta Airlines | 2015 - 2017</h5>
-    <h6>Managed a team of top-performers using supportive action-based leadership. Partnered with multiple stages of the user lifecycle to improve experience. Performed quality assurance evaluations by assessing/monitoring team member/customer interactions. Facilitated trainings and created job aids to develop operating procedures. Resolved escalated/high value customer inquiries through outstanding customer support in a fast-paced environment  </h6>
-  </div>
+    <h4>Customer Experience Lead &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Delta Airlines | 2015 - 2017</h4>
+    <ul>
+      <li>Managed a team of top-performers using supportive action-based leadership</li>
+      <li>Partnered with multiple stages of the user lifecycle to improve experience</li>
+      <li>Performed quality assurance evaluations by assessing/monitoring team member/customer interactions</li>
+      <li>Facilitated trainings and created job aids to develop operating procedures</li>
+      <li>Resolved escalated/high value customer inquiries through outstanding customer support in a fast-paced environment</li>
+    </ul>
+      </div>
+    
    <div class="experience-header">
-    <h></h>
   </div>
   
   
   <div>
-    <h4>Customer Account Specialist</h4>
-    <h5>Park Nicollet Health Services | 2012 - 2015</h5>
-    <h6>Articulated billing and coding to inbound/outbound callers. Calculated price estimates to potential and existing patients. Enrolled uninsured patients into affordable healthcare coverage while resolving outstanding accounts for the Walk-In Billing Office. </h6>
-  </div>
+    <h4>Customer Account Specialist &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Park Nicollet Health Services | 2012 - 2015</h4>
+    <ul>
+      <li>Articulated billing and coding to inbound/outbound callers</li>
+      <li>Calculated price estimates to potential and existing patients</li>
+      <li>Enrolled uninsured patients into affordable healthcare coverage while resolving outstanding accounts</li>
+    </ul>
+      </div>
   
     </body>
 </html>
