--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width">
   <title>Andrea Cannon Resume</title>
   <link rel="stylesheet" href="style.css" />
-</head>
+  </head>
 <body>
  <div>
-   <h1>Andrea Cannon</h1>
-   <img src="https://lh3.googleusercontent.com/a/AEdFTp7i_9TElUep12jBnEr4QvdDjPSCMUnlwGJnaqLsSA=s317-p-rw-no"/>
+   <center><h1>Andrea Cannon</h1>
+   <center><img src="https://lh3.googleusercontent.com/a/AEdFTp7i_9TElUep12jBnEr4QvdDjPSCMUnlwGJnaqLsSA=s317-p-rw-no"/>
   <p>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</p>
  </div>
   
   <div class="experience-header">
-    <h3>Experience</h3>
+    <h3>EXPERIENCE</h3>
   </div>
   
   <div>
@@ -65,7 +65,7 @@
       <li>Partnered with multiple stages of the user lifecycle to improve experience</li>
       <li>Performed quality assurance evaluations by assessing/monitoring team member/customer interactions</li>
       <li>Facilitated trainings and created job aids to develop operating procedures</li>
-      <li>Resolved escalated/high value customer inquiries through outstanding customer support in a fast-paced environment</li>
+      <li>Resolved escalated inquiries for high value cuestomers(HVC)through outstanding customer support</li>
     </ul>
       </div>
     
@@ -82,5 +82,17 @@
     </ul>
       </div>
   
+      <div class="experience-header">
+    <h3>EDUCATION</h3>
+  </div>
+  
+  <div>
+    <h4>University of Minnesota &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Twin Citites Campus | 2018</h4>
+    <ul>
+      <li>Communications and Media Studies B.A.</li>
+    </ul>
+      </div>
+  
+     
     </body>
 </html>
