--- a/index.html
+++ b/index.html
@@ -5,20 +5,37 @@
   <meta name="viewport" content="width=device-width">
   <title>Andrea Cannon Resume</title>
   <link rel="stylesheet" href="style.css" />
+   <style>
+        img {
+            vertical-align: middle;
+        }
+    </style>
   </head>
-<body>
+
  <div class="banner">
-        <h1>Andrea Cannon</h1>
    <img src="https://lh3.googleusercontent.com/a/AEdFTp7i_9TElUep12jBnEr4QvdDjPSCMUnlwGJnaqLsSA=s317-p-rw-no"/>
-  <p>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</p>
+  <span>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</span>
  </div>
+  </body>
   
+<div>
+<div class="name">
+<h1>Andrea Cannon</h1>
+  </div>
+
   <div class="experience-header">
     <h3>EXPERIENCE</h3>
   </div>
   
-  <div>
-    <h4>SC Rental Assistance Program Supervisor &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Nan McKay | 2022 - 2023</h4>
+ 
+ <div>
+   <div class="role">
+     <h4>SC Rental Assistance Program Supervisor</h4>
+    </div>
+   <div class="year">
+     <h4>Nan McKay | 2022 - 2023</h4>
+    </div>
+<div>
     <ul>
       <li>Responsible for overseeing day to day operations of 100+ employee service center</li>
       <li>Review and coach team on customer interactions enforcing organization-wide standards</li>
@@ -26,14 +43,21 @@
     </ul>
       </div>
   
+  
  
    <div class="experience-header">
     <h></h>
   </div>
   
-  <div>
-    <h4>Research/ Remediation Analyst &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Wells Fargo | 2019 - 2021</h4>
-    <ul>
+<div>
+   <div class="role">
+     <h4>Research & Remediation Analyst</h4>
+    </div>
+   <div class="year">
+     <h4>Wells Fargo | 2019- 2021</h4>
+    </div>
+<div>
+  <ul>
     <li>Transitioned multiple channels into a streamlined [Enterprise Complaints Management Office</li>
     <li>Implemented Net Promoter System] to improve user experience </li>
      <li>Analyzed and resolved dozens of applications, customer accounts and reports.</li>
@@ -45,7 +69,13 @@
   </div>
   
   <div>
-    <h4>Equipment Title Manager &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Wells Fargo | 2017 - 2019</h4>
+   <div class="role">
+     <h4>Equipment Titling Manager</h4>
+    </div>
+   <div class="year">
+     <h4>Wells Fargo | 2017- 2019</h4>
+    </div>
+<div>
     <ul>
       <li>Evaluated client accounts for state-specific title/lien entry/release</li>
       <li>Prepared and managed reporting, acting as cross-departmental liaison</li>
@@ -59,8 +89,14 @@
   
   
   <div>
-    <h4>Customer Experience Lead &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Delta Airlines | 2015 - 2017</h4>
-    <ul>
+   <div class="role">
+     <h4>Customer Experience Lead</h4>
+    </div>
+   <div class="year">
+     <h4>Delta Airlines | 2015- 2017</h4>
+    </div>
+<div>   
+  <ul>
       <li>Managed a team of top-performers using supportive action-based leadership</li>
       <li>Partnered with multiple stages of the user lifecycle to improve experience</li>
       <li>Performed quality assurance evaluations by assessing/monitoring team member/customer interactions</li>
@@ -74,8 +110,14 @@
   
   
   <div>
-    <h4>Customer Account Specialist &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Park Nicollet Health Services | 2012 - 2015</h4>
-    <ul>
+   <div class="role">
+     <h4>Customer Account Specialist</h4>
+    </div>
+   <div class="year">
+     <h4>Park Nicollet Health Services | 2012- 2015</h4>
+    </div>
+<div>
+  <ul>
       <li>Articulated billing and coding to inbound/outbound callers</li>
       <li>Calculated price estimates to potential and existing patients</li>
       <li>Enrolled uninsured patients into affordable healthcare coverage while resolving outstanding accounts</li>
@@ -87,8 +129,14 @@
   </div>
   
   <div>
-    <h4>University of Minnesota &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Twin Citites Campus | 2018</h4>
-    <ul>
+   <div class="role">
+     <h4>University of Minnesota</h4>
+    </div>
+   <div class="year">
+     <h4>Twin Cities Campus | 2018</h4>
+    </div>
+<div>
+  <ul>
       <li>Communications and Media Studies B.A.</li>
     </ul>
       </div>
