--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <meta name="viewport" content="width=device-width">
   <title>Andrea Cannon Resume</title>
   <link rel="stylesheet" href="style.css" />
-   <style>
-        img {
-            vertical-align: middle;
-        }
-    </style>
   </head>
-
- <div class="banner">
-   <img src="https://lh3.googleusercontent.com/a/AEdFTp7i_9TElUep12jBnEr4QvdDjPSCMUnlwGJnaqLsSA=s317-p-rw-no"/>
-  <span>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</span>
+  
+  <div class="experience-header">
+  </div>
+     
+ <div class="summary">
+   <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+   <h3>Detail oriented communications professional with 10+ years of strong technical and interpersonal skills specializing in results.</h3>
+  </div>
+  
+  <div class="pic">
+   <img src="https://mail.google.com/mail/u/0?ui=2&ik=054ad5a368&attid=0.1.1&permmsgid=msg-f:1758403690980550919&th=18671ad72ca1a907&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9rqBZHg7A2LBjqQzBQzlcygl_XE0G_opOpv0vX0s-gMiYm3ceR_g2JfRxYr6Rgb5eviaqci_z00UZvY3X6vp6ZLQpdvgnBEnbM0jzkacQiaQRuoVcdHhXO2t0&disp=emb"/>
  </div>
+  
   </body>
   
 <div>
@@ -24,7 +33,7 @@
   </div>
 
   <div class="experience-header">
-    <h3>EXPERIENCE</h3>
+    <h2>EXPERIENCE</h2>
   </div>
   
  
@@ -125,7 +134,7 @@
       </div>
   
       <div class="experience-header">
-    <h3>EDUCATION</h3>
+    <h2>EDUCATION</h2>
   </div>
   
   <div>
